--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,8 @@ repository: https://github.com/FEASTorg/FEASTorg.github.io
 search: true
 
 # Navigation settings
-nav_external_links_only: true # Only show links from navigation.yml
-aux_links_new_tab: true
-navigation:
-  data: navigation
+nav_enabled: true
+nav_data_file: navigation
 
 # Exclude directories and files that should not be published
 exclude:
