--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,8 +1,7 @@
 name: Deploy Jekyll site to Pages
 
 on:
-  push:
-    branches: ["main"]
+  push: { branches: ["main"] }
   workflow_dispatch:
 
 permissions:
@@ -11,7 +10,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: true
 
 jobs:
@@ -20,6 +19,9 @@ jobs:
     steps:
       - name: Checkout hub
         uses: actions/checkout@v5
+
+      - name: Install build tools
+        run: sudo apt-get update && sudo apt-get install -y jq rsync
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
