add FROOTS, PROTINS, SUGIRS

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,9 @@
   children:
     - name: BREADS
       url: /projects/breads/
+    - name: FROOTS
+      url: /projects/froots/
+    - name: PROTINS
+      url: /projects/protins/
+    - name: SUGIRS
+      url: /projects/sugirs/
