--- a/_config.yml
+++ b/_config.yml
@@ -91,24 +91,28 @@ defaults:
     values:
       nav_exclude: true
   - scope:
-      path: "implementation-domain/**"
+      path: "implementation-domains/**"
     values:
       layout: "default"
+      parent: "Functional Implementation Domains"
       nav_exclude: false
   - scope:
       path: "system-levels/**"
     values:
       layout: "default"
+      parent: "Hierarchical System Levels"
       nav_exclude: false
   - scope:
       path: "development/**"
     values:
       layout: "default"
+      parent: "Development"
       nav_exclude: false
   - scope:
       path: "developer-resources/**"
     values:
       layout: "default"
+      parent: "Developer Resources"
       nav_exclude: false
 
 # Files and directories to exclude from processing
