docs: update navigation and projects page for ProtoKit and DevBoardDepot
- Add ProtoKit and DevBoardDepot links to navigation.yml external_links
- Update projects.md with descriptions of new project repositories
- Adjust nav_order for Projects page to maintain logical ordering

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,3 +25,7 @@ external_links:
     url: /developer-resources/kicad-hierarchical-designs/
   - name: KiCad-Simulation-Examples
     url: /developer-resources/kicad-simulation-examples/
+  - name: ProtoKit
+    url: /projects/protokit/
+  - name: DevBoardDepot
+    url: /projects/devboarddepot/
