--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,12 @@ defaults:
       layout: "default"
       parent: "Developer Resources"
       nav_exclude: false
+  - scope:
+      path: "projects/**"
+    values:
+      layout: "default"
+      parent: "Projects"
+      nav_exclude: false
 
 callouts_level: quiet # or loud
 callouts:
