docs(feat): add breakoutpack to site

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,3 +29,5 @@ external_links:
     url: /projects/protokit/
   - name: DevBoardDepot
     url: /projects/devboarddepot/
+  - name: BreakoutPack
+    url: /projects/breakoutpack/
