chore(ci): add CRUMBS and pyCRUMBS as sources to bind to projects

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,3 +31,7 @@ external_links:
     url: /projects/devboarddepot/
   - name: BreakoutPack
     url: /projects/breakoutpack/
+  - name: CRUMBS
+    url: /projects/crumbs/
+  - name: pyCRUMBS
+    url: /projects/pycrumbs/
