--- a/_config.yml
+++ b/_config.yml
@@ -152,3 +152,7 @@ exclude:
   - TODO.md
   - .git/
   - .github/
+
+sass:
+  quiet_deps: true # https://github.com/just-the-docs/just-the-docs/issues/1541
+  silence_deprecations: ["import"] # https://github.com/just-the-docs/just-the-docs/issues/1607
