--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,11 +33,11 @@ jobs:
         id: pages
         uses: actions/configure-pages@v5
 
-      - name: Import external docs
+      - name: Import remote repository docs
         run: bash scripts/import_sources.sh
 
-      - name: Generate external project stubs
-        run: python3 scripts/generate_external_redirects.py
+      - name: Generate linked project stubs
+        run: python3 scripts/generate_linked_redirects.py
 
       - name: Build with Jekyll
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
