--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,7 +4,7 @@ on:
   push: { branches: ["main"] }
   workflow_dispatch:
   schedule:
-    # 23:11 EST (UTC−5) daily → 04:11 UTC
+  # 23:11 EST (UTC-5) daily -> 04:11 UTC
     - cron: "11 4 * * *"
 
 permissions:
