--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,3 +35,5 @@ external_links:
     url: /projects/crumbs/
   - name: pyCRUMBS
     url: /projects/pycrumbs/
+  - name: linux-wire
+    url: /projects/linux-wire/
