add kneead as linked project

--- a/_data/linked_projects.json
+++ b/_data/linked_projects.json
@@ -69,6 +69,11 @@
             "name": "Slice_PRTO_SMT_S2L",
             "title": "Slice PRTO SMT S2L",
             "url": "/Slice_PRTO_SMT_S2L/"
+        },
+        {
+            "name": "KNEEAD",
+            "title": "KNEEAD",
+            "url": "/KNEEAD/"
         }
     ]
 }
